Fix blog margin spacing and projects spacing

--- a/styles/breakpoints/_projects-breakpoints.scss
+++ b/styles/breakpoints/_projects-breakpoints.scss
@@ -6,6 +6,7 @@
         .page-heading {
             font-size: .8em;
             p {
+                padding: 12px;
                 font-size: 1.1em;
             }
         }
@@ -32,7 +33,9 @@
     .page-heading {
         font-size: .7em;
         p {
+            padding: 12px;
             font-size: 1.2em;
+            margin-bottom: 30px;
         }
     }
     .inner-sec{
