--- a/styles/pages/blog.scss
+++ b/styles/pages/blog.scss
@@ -22,6 +22,7 @@ h1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-bottom: 5%;
 }
 
 .read-more{
